@startuml
!include mappingDefinitionInterface.puml
class ToStringPropertyToColumnMapping {
exasolColumnName
propertyExtraction
...
}


class IterationIndexColumnMapping{
+accept(ColumnMappingVisitor)
...
}

abstract class AbstractColumnMapping <<abstract>>{
-exasolColumnName
+getExasolColumnName()
}

abstract class AbstractPropertyToColumnMapping <<abstract>>{
-pathToSourceProperty
-lookupFailBehaviour
+pathToSourceProperty()
+lookupFailBehaviour()
+accept(ColumnMappingVisitor)
}

ColumnMapping <|. AbstractColumnMapping
AbstractColumnMapping <|-- IterationIndexColumnMapping
AbstractColumnMapping <|-- AbstractPropertyToColumnMapping
PropertyToColumnMapping <|. AbstractPropertyToColumnMapping
AbstractPropertyToColumnMapping <|-- ToStringPropertyToColumnMapping
@enduml 

